@@ -181,7 +181,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3806) Gracefully fall back to client-side scaling on |thumb| image
   that passes $wgMaxImageArea
 * MySQL 5.0 strict mode fix for moving unwatched pages
-
+* (bug 3816) Throw edit conflict instead of fatal error when a page is
+  moved or deleted during section edit
 
 === Caveats ===
 
